--- a/web/src/index.css
+++ b/web/src/index.css
@@ -127,6 +127,9 @@
     --sidebar-accent-foreground: oklch(0.205 0 0);
     --sidebar-border: oklch(0.922 0 0);
     --sidebar-ring: oklch(0.708 0 0);
+    ::selection {
+      @apply bg-white text-black
+    }
   }
 
   .dark {
@@ -138,5 +141,8 @@
     --sidebar-accent-foreground: oklch(0.985 0 0);
     --sidebar-border: oklch(1 0 0 / 10%);
     --sidebar-ring: oklch(0.439 0 0);
+    ::selection {
+      @apply bg-white text-black
+    }
   }
 }
