--- a/web/src/index.css
+++ b/web/src/index.css
@@ -47,6 +47,10 @@
   --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
   --color-sidebar-border: var(--sidebar-border);
   --color-sidebar-ring: var(--sidebar-ring);
+  --color-json-1: var(--json-1);
+  --color-json-2: var(--json-2);
+  --color-json-3: var(--json-3);
+  --color-json-4: var(--json-4);
   --font-sans: "Geist", ui-sans-serif, system-ui, sans-serif;
 }
 
@@ -83,6 +87,11 @@
   --sidebar-accent-foreground: oklch(0.205 0 0);
   --sidebar-border: oklch(0.922 0 0);
   --sidebar-ring: oklch(0.708 0 0);
+  /* llm json highlight color */
+  --json-1: oklch(0.3583 0.0798 275.11);
+  --json-2: oklch(0.4375 0.1395 287.44);
+  --json-3: oklch(0.5642 0.1824 310.64);
+  --json-4: oklch(0.6157 0.2057 332.72);
 }
 
 .dark {
@@ -117,6 +126,11 @@
   --sidebar-accent-foreground: oklch(0.985 0 0);
   --sidebar-border: oklch(1 0 0 / 10%);
   --sidebar-ring: oklch(0.556 0 0);
+  /* llm json highlight color */
+  --json-1: oklch(0.3583 0.0798 275.11);
+  --json-2: oklch(0.4375 0.1395 287.44);
+  --json-3: oklch(0.5642 0.1824 310.64);
+  --json-4: oklch(0.6157 0.2057 332.72);
 }
 
 @layer base {
